fix: fix swiper on tablet

--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -45,7 +45,7 @@
     font-size: 25px;
 
     @include mobile {
-      max-width: rem(300px);
+      max-width: rem(200px);
     }
   }
 
