--- a/src/blocks/swiper/swiper.scss
+++ b/src/blocks/swiper/swiper.scss
@@ -6,6 +6,9 @@
 
   @include tablet {
     width: 100%;
+    height: 300px;
+    padding-inline: 10px;
+    border: none;
   }
 }
 
